# liquidation-bot

./: .dockerignore  .env.example  .env.kovan  .env.mainnet  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  hardhat.config.ts  package.json
.github/workflows/: release.yml
abi/: AbstractTerminator.json  CreditAccount.json  DataCompressor.json  IAddressProvider.json  IAppAddressProvider.json  IAppCreditManager.json  IAppERC20.json  IAppPoolService.json  ICreditAccount.json  ICreditFilter.json  ICreditManager.json  IDataCompressor.json  IFlashLoanReceiver.json  ILendingPoolAddressesProvider.json  IPoolService.json  IPriceOracle.json  ITerminator.json  IWETHGateway.json  IYVault.json  MultiCall2.json  Terminator.json  TerminatorFlash.json
contracts/: AbstractTerminator.sol  Constants.sol  ITerminator.sol  Terminator.sol  TerminatorFlash.sol
contracts/interfaces/: DataTypes.sol  IAddressProvider.sol  ICreditManager.sol  IDataCompressor.sol  IFlashLoanReceiver.sol  ILendingPoolAddressesProvider.sol
contracts/libraries/: Types.sol
scripts/: allowExecutor.ts  approveTokens.ts  deploy.ts  flash.ts  fork.sh  getPaths.ts  setLT.ts
src/: errors.rs  main.rs
src/ampq_service/: service.rs
src/bindings/: abstract_terminator.rs  address_provider.rs  aggregator_v3_interface.rs  credit_filter.rs  credit_manager.rs  data_compressor.rs  erc20.rs  flash_loan_terminator.rs  i_contracts_register.rs  i_version.rs  iaddress_provider.rs  iapp_address_provider.rs  iapp_credit_manager.rs  iapp_erc20.rs  ierc20.rs  (+23 more)
utils/: expect.ts  formatter.ts  tokenData.ts  transaction.ts
(+62 files in other folders)
