[package]
name = "liq_rs"
version = "0.1.0"
authors = ["Mikhail Lazarev <mikael.lazarev@gmail.com>"]
edition = "2021"
default-run = "liq_rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.39"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
dotenv = "0.15"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
ethers-core = "0.5.0"
hex = "0.4"
convert_case = "0.1.0"
futures = "0.3.17"
once_cell = { version = "1.8.0" }
tokio-amqp = "1.0.0"
lapin = "1.8.0"